objects/dc_Commission_Table__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Commission Tables</relationshipLabel>
        <relationshipName>Commission_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Contract</label>
        <referenceTo>Product_Contract__c</referenceTo>
        <relationshipLabel>Commission Tables</relationshipLabel>
        <relationshipName>Commission_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Commission Table</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Commission Table</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>